@@ -1,3 +1,7 @@
+2007-04-21  David Lawrence Ramsey  <pooka109@gmail.com>
+
+	* files.c (do_writeout): Simplify.
+
 2007-04-19  David Lawrence Ramsey  <pooka109@gmail.com>
 
 	* files.c (tail): Remove unneeded if statement.
